# IzEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  conanfile.txt  install.bat  main.cpp  main.h  vcpkg-configuration.json  vcpkg.json
.conan/: windows.conf
.github/workflows/: application.yaml
.vcpkg/: windows.cmake  x64-windows-static.cmake
cmake/: FindDirectXSDK.cmake  Tools.cmake
plugins/: CMakeLists.txt
plugins/Console/: CMakeLists.txt  main.cpp
plugins/Example/: CMakeLists.txt  main.cpp
plugins/FPS/: CMakeLists.txt  main.cpp
plugins/Graphics/: CMakeLists.txt  main.cpp
plugins/Graphics/Features/: CMakeLists.txt  General.cpp  General.hpp  Graphics.cpp  Graphics.hpp
plugins/Graphics/Settings/: General.cpp  General.hpp
plugins/Lagometer/: main.cpp
plugins/Player/: CMakeLists.txt  main.cpp
plugins/Player/Modules/: CMakeLists.txt  FPS.cpp  Lagometer.cpp  Velocity.cpp
plugins/Reloader/: main.cpp
plugins/Velocity/: CMakeLists.txt  main.cpp
plugins/Velocity/Modules/: CMakeLists.txt  Velocity.cpp  Velocity.hpp
src/: API.hpp  CMakeLists.txt  Plugin.hpp  main.cpp
src/Engine/: API.hpp  Base.hpp  CMakeLists.txt  Plugin.hpp
src/Engine/Backends/: CMakeLists.txt  DX9.hpp  ImGUI.hpp
src/Engine/Backends/DX9/: Assets.cpp  Assets.hpp  CMakeLists.txt  Device.cpp  Device.hpp
src/Engine/Backends/DX9/Drawing/: CMakeLists.txt  Draw2D.cpp  Draw2D.hpp  HUD.cpp  HUD.hpp  Text.cpp  Text.hpp
src/Engine/Backends/DX9/Resources/: Font.cpp  Font.hpp  Texture.cpp  Texture.hpp
src/Engine/Backends/ImGUI/: CMakeLists.txt  Components.cpp  Components.hpp  UI.cpp  UI.hpp
src/Engine/Backends/ImGUI/Drawing/: CMakeLists.txt  Draw3D.cpp  Draw3D.hpp  Notification.cpp  Notification.hpp  Plots.cpp  Plots.hpp  Window.cpp  Window.hpp
src/Engine/Backends/ImGUI/UI/: CMakeLists.txt  Memory.cpp  Memory.hpp  Modules.cpp  Modules.hpp  Settings.cpp  Settings.hpp  Themes.cpp  Themes.hpp
src/Engine/Core/: CMakeLists.txt  Common.hpp  Interfaces.hpp  Macros.hpp  Modules.hpp
src/Engine/Core/Application/: Application.hpp  CMakeLists.txt
src/Engine/Core/Base/: CMakeLists.txt  Log.cpp  Log.hpp  Macros.hpp  Ref.hpp  Serializer.hpp  UUID.cpp  UUID.hpp
src/Engine/Core/Communication/: Actions.cpp  Actions.hpp  CMakeLists.txt  Event.hpp  Events.hpp
src/Engine/Core/Console/: CMakeLists.txt  Console.hpp
src/Engine/Core/Console/Implementation/Windows/: CMakeLists.txt  Console.cpp
src/Engine/Core/Containers/: CMakeLists.txt  CircularBuffer.hpp
src/Engine/Core/Features/: Feature.cpp  Feature.hpp  Features.cpp  Features.hpp
src/Engine/Core/Input/: Bind.hpp  CMakeLists.txt  Input.hpp  Keyboard.hpp  Mouse.hpp
src/Engine/Core/Input/Implementation/Windows/: Bind.cpp  CMakeLists.txt  Input.cpp  Keyboard.cpp  Mouse.cpp
src/Engine/Core/Interfaces/: CMakeLists.txt  IInitializable.hpp  IObject.hpp  IRenderable.hpp  ISerializable.hpp
src/Engine/Core/Macros/: Base.hpp
src/Engine/Core/Math/: CMakeLists.txt  GLM.hpp  Math.cpp  Math.hpp  Matrix3.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/Engine/Core/Memory/: Assembler.hpp  CMakeLists.txt  Function.hpp  Hook.hpp  Memory.hpp  Signature.hpp
src/Engine/Core/Memory/Implementation/Windows/: CMakeLists.txt  Memory.cpp  Signature.cpp
src/Engine/Core/Modules/: Module.cpp  Module.hpp  Modules.cpp  Modules.hpp
src/Engine/Core/Modules/Features/: Feature.cpp  Feature.hpp  Features.cpp  Features.hpp
src/Engine/Core/Screen/: CMakeLists.txt  VirtualScreen.cpp  VirtualScreen.hpp
src/Engine/Core/Serializer/: CMakeLists.txt  ISerializable.hpp  Serializer.hpp
src/Engine/Core/System/: CMakeLists.txt  Crash.hpp  Environment.hpp  Plugin.hpp  Plugins.cpp  Plugins.hpp  System.hpp  Window.hpp
src/Engine/Core/System/Implementation/Windows/: CMakeLists.txt  Crash.cpp  Environment.cpp  Plugin.cpp  System.cpp  Window.cpp
src/Engine/Core/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/Engine/Modules/: Feature.hpp  Module.hpp
src/Engine/Renderer/: CMakeLists.txt  Common.hpp
src/Engine/Renderer/Backends/: CMakeLists.txt
src/Engine/Renderer/Backends/DX9/: Assets.cpp  Assets.hpp  Base.hpp  CMakeLists.txt  Common.hpp  Device.cpp  Device.hpp
src/Engine/Renderer/Backends/DX9/Drawing/: Draw2D.cpp  Draw2D.hpp  HUD.cpp  HUD.hpp  Text.cpp  Text.hpp
src/Engine/Renderer/Backends/DX9/Resources/: CMakeLists.txt  Font.cpp  Font.hpp  Texture.cpp  Texture.hpp
src/Engine/Renderer/Backends/ImGUI/: Base.hpp  CMakeLists.txt  Common.hpp  Components.cpp  Components.hpp  UI.cpp  UI.hpp
src/Engine/Renderer/Backends/ImGUI/Drawing/: CMakeLists.txt  Notification.cpp  Notification.hpp  Plots.cpp  Plots.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp
src/Engine/Renderer/Backends/ImGUI/Fonts/: CMakeLists.txt
src/Engine/Renderer/Backends/ImGUI/UI/: CMakeLists.txt  Memory.cpp  Memory.hpp  TextEditor.cpp  TextEditor.hpp  Themes.cpp  Themes.hpp
src/Engine/Renderer/Core/: CMakeLists.txt  Renderer.hpp
src/Engine/Renderer/Core/Implementation/: CMakeLists.txt
src/Engine/Renderer/Core/Implementation/DX9/: CMakeLists.txt  Renderer.cpp
src/Engine/Renderer/Drawing/: CMakeLists.txt  Draw2D.hpp  HUD.cpp  HUD.hpp  Text.cpp  Text.hpp
src/Engine/Renderer/Drawing/Implementation/DX9/: CMakeLists.txt  Draw2D.cpp
src/Engine/Renderer/Resources/: Browser.hpp  CMakeLists.txt  Font.hpp  Texture.hpp
src/Engine/Renderer/Resources/Implementation/DX9/: Browser.cpp  CMakeLists.txt  Font.cpp  Texture.cpp
src/Engine/Sys/: CMakeLists.txt  Log.hpp  Memory.hpp  Win32.hpp
src/Engine/Sys/Memory/: Assembler.hpp  CMakeLists.txt  Function.hpp  Hook.hpp
src/Engine/Sys/Win32/: CMakeLists.txt  Console.cpp  Console.hpp  Environment.cpp  Environment.hpp  KeyListener.cpp  KeyListener.hpp  Memory.cpp  Memory.hpp  Plugin.cpp  Plugin.hpp  Plugins.cpp  Plugins.hpp  Sig.hpp  Signature.cpp  Signature.hpp  Sys.hpp
src/Engine/Sys/Windows/: Base.hpp  Plugin.hpp
src/Engine/UI/: CMakeLists.txt
src/Examples/: CMakeLists.txt  WindowsDX9.cpp
src/Game/: Application.cpp  Base.hpp  CMakeLists.txt  Definitions.hpp  Dvar.hpp  (+4 more)
(+233 files in other folders)
